k8s/ingress/test/system.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: system-ingress
  namespace: kube-system
spec:
  rules:
  - host: ui.k8stest.bst-1.cns.bstjpc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
